<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6D29D">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#301D02"
        android:textSize="18sp"
        android:text="@string/information"
        android:paddingTop="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#301D02"
        android:textSize="18sp"
        android:text="@string/info_text"
        android:paddingTop="15dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#301D02"
        android:textSize="18sp"
        android:text="@string/contact"
        android:paddingTop="15dp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/mezek"
        android:paddingTop="15dp"
        android:layout_gravity="center"/>

</LinearLayout>