<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Shop"
    android:background="#F1DDA0">

    <Spinner
        android:id="@+id/spinner_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/prompt_honey"
        android:background="@color/cardview_light_background"/>

    <TextView
        android:id="@+id/shop_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:paddingTop="10dp"
        android:textColor="#372202"
        android:textSize="20sp"
        android:text="@string/shop_prompt"/>

    <TextView
        android:id="@+id/prompt_honey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/shop_prompt"
        android:textColor="#372202"
        android:textSize="18sp"
        android:layout_alignParentLeft="true"
        android:text="@string/choose_honey"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/insert_quantity"
        android:layout_below="@+id/spinner_bar"
        android:textColor="#372202"
        android:textSize="18sp"
        android:layout_alignParentLeft="true"
        android:text="@string/quantity_prompt"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/insert_name"
        android:layout_below="@+id/edit_quantity"
        android:textColor="#372202"
        android:textSize="18sp"
        android:layout_alignParentLeft="true"
        android:text="@string/name_prompt"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/insert_contact"
        android:layout_below="@+id/edit_name"
        android:textColor="#372202"
        android:textSize="18sp"
        android:layout_alignParentLeft="true"
        android:text="@string/contact_prompt"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/insert_address"
        android:layout_below="@+id/edit_contact"
        android:textColor="#372202"
        android:textSize="18sp"
        android:layout_alignParentLeft="true"
        android:text="@string/address_prompt"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/insert_request"
        android:layout_below="@+id/edit_address"
        android:textColor="#372202"
        android:textSize="18sp"
        android:layout_alignParentLeft="true"
        android:text="@string/request_prompt"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_quantity"
        android:layout_below="@+id/insert_quantity"
        android:textColor="#372202"
        android:textSize="18sp"
        android:layout_alignParentRight="true"
        android:inputType="number"
        android:background="@color/cardview_light_background"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_name"
        android:layout_below="@+id/insert_name"
        android:textColor="#372202"
        android:textSize="18sp"
        android:layout_alignParentRight="true"
        android:inputType="text"
        android:background="@color/cardview_light_background"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_contact"
        android:layout_below="@+id/insert_contact"
        android:textColor="#372202"
        android:textSize="18sp"
        android:layout_alignParentRight="true"
        android:inputType="text"
        android:background="@color/cardview_light_background"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_address"
        android:layout_below="@+id/insert_address"
        android:textColor="#372202"
        android:textSize="18sp"
        android:layout_alignParentRight="true"
        android:inputType="text"
        android:background="@color/cardview_light_background"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_request"
        android:layout_below="@+id/insert_request"
        android:textColor="#372202"
        android:textSize="18sp"
        android:layout_alignParentRight="true"
        android:inputType="text"
        android:background="@color/cardview_light_background"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/order_button"
        android:layout_below="@+id/edit_request"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:text="Order"
        android:background="@color/cardview_light_background"
        android:clickable="true"/>
</RelativeLayout>


